randomizer + 209 erro  added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="allcities.js"></script>
+    <script src="countries.json"></script>
     <script src="weather.js"></script>
 </head>
 <body>
@@ -20,7 +21,8 @@
             <h2>HOW'S WEATHER LIKE IN ANOTHER CITY?</h2>
             <input id="city_input" type="text" placeholder="city" autocomplete="on"><br>
             <input id="city_submit" type="submit" value="Get Weather!">
-        </form> 
+        </form>
+        <button id="randomizer">Get A Random City</button>
     </div>
     <div id="right_side"></div>
 </body>
